# Arcade

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp  map.nibbler  readme.md
.github/workflows/: main.yml
core/include/: Core.hpp  Greeter.hpp
core/src/: Core.cpp  Greeter.cpp
doc/html/: 3_817_85_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_817_85_2CompilerIdC_2CMakeCCompilerId_8c.html  3_820_80_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_820_80_2CompilerIdC_2CMakeCCompilerId_8c.html  CMakeCache_8txt.html  CMakeFiles_2arcade_8dir_2link_8txt.html  CMakeFiles_2ncurses_8dir_2link_8txt.html  CMakeFiles_2sdl2_8dir_2link_8txt.html  CMakeFiles_2sfml_8dir_2link_8txt.html  CMakeLists_8txt.html  CMakeRuleHashes_8txt.html  Cell_8hpp.html  Cell_8hpp__dep__incl.map  Cell_8hpp__dep__incl.md5  Cell_8hpp_source.html  Color_8cpp.html  Color_8cpp__incl.map  Color_8cpp__incl.md5  Color_8hpp.html  Color_8hpp__dep__incl.map  Color_8hpp__dep__incl.md5  Color_8hpp__incl.map  Color_8hpp__incl.md5  Color_8hpp_source.html  Common_8hpp.html  Common_8hpp__dep__incl.map  Common_8hpp__dep__incl.md5  Common_8hpp_source.html  Core_8cpp.html  Core_8cpp__incl.map  Core_8cpp__incl.md5  Core_8hpp.html  Core_8hpp__dep__incl.map  Core_8hpp__dep__incl.md5  Core_8hpp__incl.map  Core_8hpp__incl.md5  Core_8hpp_source.html  CursesWrapper_8cpp.html  CursesWrapper_8cpp__incl.map  CursesWrapper_8cpp__incl.md5  (+432 more)
doc/latex/: 3_817_85_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  3_817_85_2CompilerIdC_2CMakeCCompilerId_8c.tex  3_820_80_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  3_820_80_2CompilerIdC_2CMakeCCompilerId_8c.tex  CMakeCache_8txt.tex  CMakeFiles_2arcade_8dir_2link_8txt.tex  CMakeFiles_2ncurses_8dir_2link_8txt.tex  CMakeFiles_2sdl2_8dir_2link_8txt.tex  CMakeFiles_2sfml_8dir_2link_8txt.tex  CMakeLists_8txt.tex  CMakeRuleHashes_8txt.tex  Cell_8hpp.tex  Cell_8hpp__dep__incl.md5  Color_8cpp.tex  Color_8cpp__incl.md5  Color_8hpp.tex  Color_8hpp__dep__incl.md5  Color_8hpp__incl.md5  Common_8hpp.tex  Common_8hpp__dep__incl.md5  Core_8cpp.tex  Core_8cpp__incl.md5  Core_8hpp.tex  Core_8hpp__dep__incl.md5  Core_8hpp__incl.md5  CursesWrapper_8cpp.tex  CursesWrapper_8cpp__incl.md5  CursesWrapper_8hpp.tex  CursesWrapper_8hpp__dep__incl.md5  CursesWrapper_8hpp__incl.md5  Curses_8cpp.tex  Curses_8cpp__incl.md5  Curses_8hpp.tex  Curses_8hpp__dep__incl.md5  Curses_8hpp__incl.md5  DLWrapper_8cpp.tex  DLWrapper_8cpp__incl.md5  DLWrapper_8hpp.tex  DLWrapper_8hpp__dep__incl.md5  DLWrapper_8hpp__incl.md5  (+197 more)
games/nibbler/: CMakeLists.txt  main.cpp
games/nibbler/include/: Nibbler.hpp  Snake.hpp
games/nibbler/include/misc/: Cell.hpp  Direction.hpp
games/nibbler/src/: Nibbler.cpp  Snake.cpp
games/solarfox/: CMakeLists.txt  main.cpp
include/: Common.hpp
include/display/: Curses.hpp  Sdl.hpp  Sfml.hpp
include/exceptions/: DLopenFailure.hpp  FileNotCompatible.hpp  LibNotAvailable.hpp
include/interfaces/: IGame.hpp  IGraphical.hpp
include/misc/: CursesWrapper.hpp  DLWrapper.hpp  SdlWrapper.hpp
include/protocols/: DisplayProtocol.hpp
include/resources/: Color.hpp  KeyTranslation.hpp  Keys.hpp  Sprite.hpp  Text.hpp
src/misc/: CursesWrapper.cpp  (+2 more)
(+278 files in other folders)
